# pyForeFire

./: .gitignore  CMakeLists.txt  ForeFire.0.nc  README.md  Rothermel.ffann  Rothermeldb.csv  mbase.ffann  pyproject.toml  setup.py  test.py
.github/workflows/: wheels.yml
configs/: hill.yaml  nn_rothermel_andrews_uniform.yaml  rothermel_andrews_uniform.yaml  rothermel_uniform.yaml
examples/: Idealized_AtimeForced.py  Idealized_curvature.py  Idealized_diffusion.py  Idealized_frontDepth.py  Idealized_wind.py  TF_graph_simulation.py  generate_TF_graph.py  learnFromRun.py  percolation.py  simulation.py  tmp.py  uniform_simulation.py  wind.py
src/pyforefire/: __init__.py  _pyforefire.cpp  helpers.py
src/pylibforefire/: pylibforefire.cpp  pylibforefire.h
test/: Idealized_Atime.py  Idealized_AtimeForced.py  Idealized_curvature.py  Idealized_diffusion.py  Idealized_frontDepth.py  Idealized_frontMerging.py  Idealized_unsteady.py  Idealized_wind.py  TF_graph_simulation.py  curvature.py  forefire_TF_helpers.py  forefire_helper.py  fuel_stripes.py  generate_TF_graph.py  hill_simulation.py  learnFromRun.py  percolation.py  rothermel_andrews_2018.py  simulation.py  test.py  tf_to_bin.py  uniform_simulation.py  wind.py
